link added | padding diff fixed in collapsed fixed

--- a/src/components/material/material.css
+++ b/src/components/material/material.css
@@ -10,7 +10,7 @@
 .artifact-collapsed {
     display: flex;
     margin-bottom: 12px;
-    padding: 15px 24px;
+    padding: 15px 20px;
     border: solid 1px #d6dbdf;
     align-items: center;
     cursor: pointer;
