--- a/src/css/forms.scss
+++ b/src/css/forms.scss
@@ -1,5 +1,5 @@
 .form__app-compose {
-    width: 800px;
+    width: 1012px;
     margin: 0 auto;
     padding: 24px;
     margin-bottom: 64px;
